--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
+    "instafeed-lite": "^1.0.10",
     "lodash.debounce": "^4.0.8",
     "next": "^7.0.0",
     "next-with-apollo": "^3.1.3",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
+    "react": "^16.8.0",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.8.3",
+    "react-instafeed": "^1.0.0",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.5.0",
     "styled-components": "^3.4.9",
+    "use-abortable-fetch": "^2.2.0",
     "waait": "^1.0.2"
   },
   "devDependencies": {
@@ -56,6 +59,9 @@
       "\\.(gql|graphql)$": "jest-transform-graphql",
       ".*": "babel-jest"
     }
+  },
+  "resolutions": {
+    "ajv": "6.8.1"
   },
   "//": "This is our babel config, I prefer this over a .babelrc file",
   "babel": {
